--- a/bindaeCurrentSituation.html
+++ b/bindaeCurrentSituation.html
@@ -6,10 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Bedbug Page</title>
     <!-- Link to map-->
-    <script
-      type="text/javascript"
-      src="https://openapi.map.naver.com/openapi/v3/maps.js?ncpClientId=y1lxlqdtw8&submodules=geocoder"
-    ></script>
+    <script type="text/javascript" src="https://openapi.map.naver.com/openapi/v3/maps.js?ncpClientId=y1lxlqdtw8&submodules=geocoder"></script>
     <!-- Link to CSS-->
     <link rel="stylesheet" href="./bindaeCurrentSituation.css" />
     <!-- Box icons -->
@@ -202,7 +199,61 @@
       </div>
     </section>
 
-
+    <div class="Section_line"></div>
+    <!-- News -->
+    <section id="News">
+      <div class="news-header">
+        <span>* 빈대 주요 뉴스 *</span>
+        <h3>NEWS</h3>
+      </div>
+      <div class="news-container">
+        <div class="news-box">
+          <div class="news-img">
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/VUDjSvOfVN4?si=boPuIU3s9jmsBDr_" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+          </div>
+          <div class="news-text">
+            <span>9 November 2023 / 질병관리청 </span>
+            <a href="https://youtu.be/VUDjSvOfVN4?si=vKSOC6HZ33p4vHj9" class="news-title">빈대! 바로 알고, 예방하자!</a>
+            <p>수면 중 가렵다면?<br>
+              빈대에 노출된 것 같다면?<br>
+              일상 속 빈대 확인 방법과 올바른 방제로 안전한 주거환경을 만들어요!<br>
+              ✅ 빈대 정보집(제2판) 바로가기 : https://url.kr/hdniz6<br>
+              * 빈대 발생 신고 : ☎110 <br>
+              </p>
+              <a href="https://youtu.be/VUDjSvOfVN4?si=vKSOC6HZ33p4vHj9">Read More</a>
+          </div>
+        </div>
+        <div class="news-box">
+          <div class="news-img">
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/zZS2hexlVyc?si=JD15ljlQ--CrsYpT" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+          </div>
+          <div class="news-text">
+            <span>30 November 2023 / 디글:Diggle </span>
+            <a href="https://youtu.be/zZS2hexlVyc?si=Og37Gc0WuwOTIogL" class="news-title"> 빈대 전문가가 알려주는 퇴치법!</a>
+            <p>tvN 대유잼 영상은 나중에 보면 늦는다! <br>
+              지금 꼭! 볼 동영상 #지금꼭볼동영상 #지꼭동 <br>
+              #유퀴즈온더블럭 #빈대전문가 #빈대퇴치<br>
+              </p>
+              <a href="https://youtu.be/zZS2hexlVyc?si=Og37Gc0WuwOTIogL">Read More</a>
+          </div>
+        </div>
+        <div class="news-box">
+          <div class="news-img">
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/yuzfJOdB2CM?si=RcbNaAo2XxzxTvQ7" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+          </div>
+          <div class="news-text">
+            <span>2 November 2023 / 채널A 뉴스 </span>
+            <a href="https://youtu.be/yuzfJOdB2CM?si=xJr_jCLtHgDUp6ZI" class="news-title">서울 절반이 ‘빈대’에 뚫렸다</a>
+            <p>[단독]서울 절반이 ‘빈대’에 뚫렸다!<br>
+                대구와 인천, 부천 등에서 발견된 빈대가, 서울에도 상륙했습니다. <br>
+                영등포구에선, 고시원에서 빈대가 발견돼 보건소에 신고가 접수됐습니다. <br>
+                민간 방역업체는 빈대 방역에 나선 지역이 서울 25개.. <br>
+              </p>
+              <a href="https://www.ichannela.com/news/main/news_detailPage.do?publishId=000000374793">Read More</a>
+          </div>
+        </div>
+      </div>
+    </section>
 
     <!-- Link To Custom JS -->
     <script src="page.js"></script>
