--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             </div>
       
             <div class="box_warp search_warp">
-              <input id="address" type="text" placeholder="주소를 입력해주세요." />
+              <input id="address" type="text" placeholder="주소를 입력해 주세요." />
               <a href="#">
                 <i class="fa-solid fa-magnifying-glass" id="submit"></i>
               </a>
@@ -83,7 +83,7 @@
           </table>
           </div>
           <nav class="navbar2">
-            <ul class="nav_wrapper"><a href="https://docs.google.com/forms/d/e/1FAIpQLScQJ7RPxNC4mvA5B5O0Q1oHhlJ08jDYEz4DVgq1l7D3lgH78Q/viewform">
+            <ul class="nav_wrapper"><a href="https://docs.google.com/forms/d/e/1FAIpQLScQJ7RPxNC4mvA5B5O0Q1oHhlJ08jDYEz4DVgq1l7D3lgH78Q/viewform" target="_blank">
               <li class="icon test_icon_name1">
                 <span class="name">빈대신고</span>
               <span><i class="bx bx-bug"></i></span>
