--- a/bindaeCurrentSituation.html
+++ b/bindaeCurrentSituation.html
@@ -5,6 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Bedbug Page</title>
+    <!-- 마커 클러스터 js파일 -->
+    <script src="MarkerClustering.js"></script> 
+    <script src="http://code.jquery.com/jquery-latest.min.js"></script>
+    <script type="text/javascript" src="http://code.jquery.com/jquery-2.2.4.min.js"></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <!-- Link to map-->
     <script
       type="text/javascript"
@@ -287,12 +293,90 @@
       }
     </script>
 
-    <script>
-      var mapOptions = {
-        center: new naver.maps.LatLng(35.3, 127.5),
+<script>
+  var mapOptions = {
+      center: new naver.maps.LatLng(35.3, 127.5),
         zoom: 1,
-      };
-      var map = new naver.maps.Map("map", mapOptions); // id와 option
-    </script>
+
+  };
+
+  var map = new naver.maps.Map('map', mapOptions);
+
+  var markers = []; //DB에서 마커 불러올때 markers.push(marker<?/*=$idx*/?>); 
+  $(document).ready(function() { //(jquery) html파일이 모두 로드되고 나면 수행
+      $.get("./index.php", function(data){ //php파일 경로
+          db = data.split(':')
+          db.pop()
+          console.log()
+          for (i=0; i<db.length; i++){
+              info=db[i].split(';') //info[0]=address info[1]=lat info[2]=lng
+              var marker = new naver.maps.Marker({
+                  position: new naver.maps.LatLng(info[1], info[2]),
+                  map: map,
+                  icon: {
+                      content: '<img src="img/dot.png"' +
+                              'style="opacity:0.8; margin: 0px; padding: 0px; border: 0px solid transparent; display: block; max-width: none; max-height: none; ' +
+                              '-webkit-user-select: none; position: absolute; width: 16px; height: 16px; left: 0px; top: 0px;">',
+                      size: new naver.maps.Size(22, 35),
+                      anchor: new naver.maps.Point(11, 35)
+                  }
+              });
+              markers.push(marker);
+          }
+      });
+  var htmlMarker1 = { //분포도에 따라 색이 어두워지는 방식이고 그걸 5단계로 나눈것
+      content: '<div style="cursor:pointer;width:40px;height:40px;line-height:42px;font-size:10px;color:white;text-align:center;font-weight:bold;background:url(https://navermaps.github.io/maps.js.ncp/docs/img/cluster-marker-1.png);background-size:contain;"></div>', //url에 원하는 이미지를 넣어서 사용가능
+      size: N.Size(40, 40),
+      anchor: N.Point(20, 20)
+  },
+  htmlMarker2 = {
+      content: '<div style="cursor:pointer;width:40px;height:40px;line-height:42px;font-size:10px;color:white;text-align:center;font-weight:bold;background:url(https://navermaps.github.io/maps.js.ncp/docs/img/cluster-marker-2.png);background-size:contain;"></div>',
+      size: N.Size(40, 40),
+      anchor: N.Point(20, 20)
+  },
+  htmlMarker3 = {
+      content: '<div style="cursor:pointer;width:40px;height:40px;line-height:42px;font-size:10px;color:white;text-align:center;font-weight:bold;background:url(https://navermaps.github.io/maps.js.ncp/docs/img/cluster-marker-3.png);background-size:contain;"></div>',
+      size: N.Size(40, 40),
+      anchor: N.Point(20, 20)
+  },
+  htmlMarker4 = {
+      content: '<div style="cursor:pointer;width:40px;height:40px;line-height:42px;font-size:10px;color:white;text-align:center;font-weight:bold;background:url(https://navermaps.github.io/maps.js.ncp/docs/img/cluster-marker-4.png);background-size:contain;"></div>',
+      size: N.Size(40, 40),
+      anchor: N.Point(20, 20)
+  },
+  htmlMarker5 = {
+      content: '<div style="cursor:pointer;width:40px;height:40px;line-height:42px;font-size:10px;color:white;text-align:center;font-weight:bold;background:url(https://navermaps.github.io/maps.js.ncp/docs/img/cluster-marker-5.png);background-size:contain;"></div>',
+      size: N.Size(40, 40),
+      anchor: N.Point(20, 20)
+  };
+
+  var markerClustering = new MarkerClustering({
+      minClusterSize: 2,
+      maxZoom: 8,
+      map: map,
+      markers: markers, //지도의 마커들을 배열로 가지고있는 변수
+      disableClickZoom: false,
+      gridSize: 120,
+      icons: [htmlMarker1, htmlMarker2, htmlMarker3, htmlMarker4, htmlMarker5],
+      indexGenerator: [10, 100, 200, 500, 1000],
+      stylingFunction: function(clusterMarker, count) {
+          $(clusterMarker.getElement()).find('div:first-child').text(count);
+          }
+      });
+  });
+
+          // $(document).ready(function(){
+          //     $.get("index.php",function(data){
+          //         console.log(data);
+          //     });
+          // });
+
+          // $(document).ready(function(){
+          //     console.log('start');
+          //         $.get("index.php",function(data){
+          //             console.log(data);
+          //         });
+          // })
+</script>
   </body>
 </html>
